* Many improvements in syncronization of entities with the database (most notably the handling of relationships).
* Numerous UI/visual feedback improvements and usability improvements (see log for full list).
* Friendlier reporting of unhandled exceptions, with ability to file a bug report from the error dialog.
* Application Settings dialog.
* Bug fixes.

Change Log:
ADD: OutputEncoding property has been added to all code generator commands and is available by selecting a command in the project tree and editing the encoding value through the property grid
CHG: Added template caching to CodeSmith engine, resulting in a performance gain of up to 35% in some projects.
FIX: If error occurs while saving metadata file, the program no longer thinks the file needs to be saved, even though it was not saved successfully.
FIX: Program always thinks custom XML metadata files have changed and asks user to save changes.
FIX: Adding XML comments (<!-- -->) just under Metadata tag (i.e. same level as entity tag) will throw an exception when generating. The comment node was being added to the grouped metadata with a key of "#comments".
FIX: XML comments are not ignored by XmlContext in the NVelocity engine.
ADD: Added (very) basic search functionality.
FIX: Adding a new, empty metadata file to a project throws a file not found exception.
FIX: Making changes in XML view (metadata editor) does not prompt user to save changes when closing the document.
FIX: Switching from XML to Design view (or vice-versa) in metadata editor when the file is read only causes changes to be lost.
FIX: Fixed a typo in the CodeSmith base template.
FIX: Entity fields are now ordered the same as the corresponding table columns when synchronizing from OleDbDataSource.
ADD: The full paths of metadata files are now viewable in the property grid.
ADD: Added a generic DataSource editor to the UI.
ADD: Added basic support (no UI support yet) for a data source that parses entity metadata from a .NET assembly.